--- a/css/orlando.css
+++ b/css/orlando.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2? family= Open+Sans & display=swap');
+
+
 header{
     width: 100%;
     height: 150px;
@@ -97,5 +100,21 @@ header .header-black li a{
 
 #logotipo{
     position: absolute;
-    top: -30px;
+    top: 20px;
+}
+
+#menu{
+    margin: 26px;
+}
+
+#menu li{
+    display: inline-block;
+    font-family: "Open-Sans";
+}
+
+#menu li a {
+    color: #FFF;
+    font-size: 16px;
+    padding: 10px 25px;
+    
 }
