--- a/css/orlando.css
+++ b/css/orlando.css
@@ -4,7 +4,9 @@
 header{
     width: 100%;
     height: 150px;
-    background-color: #5e299a;
+    background-color: rgba(94, 41, 154, .8);
+    z-index: 2;
+    position: relative;
 }
 
 a {
@@ -158,3 +160,29 @@ header .header-black li a{
 /* #menu li.search .input-group{
     top: 8px;
 } */
+
+#banner{
+    width: 100%;
+    height: 728px;
+    position: relative;
+    background: url("../img/banner.jpg") no-repeat;
+    background-position: 0px -100px;
+    top: -110px;
+    
+}
+
+#banner h1{
+    color: #FFF;
+    top: 300px;
+    position: relative;
+    font-size: 92px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, .45);
+    margin-left: 50px;
+}
+
+#banner h1 small{
+    font-size: 32px;
+    display: block;
+    color: #FFF;
+    font-weight: bold;
+}
