--- a/css/orlando.css
+++ b/css/orlando.css
@@ -223,3 +223,23 @@ header .header-black li a{
     font-family: sans-serif;
     margin-top: 20px;
 }
+
+#estatisticas {
+    background-color: #5E299A;
+    width: 100%;
+    height: 200px;
+}
+
+#estatisticas p {
+    color: #FDE092;
+    text-transform: uppercase;
+    font-size: 64px;
+    margin-top: 32px;
+}
+
+#estatisticas p small {
+    color: #FFF;
+    font-size: 24px;
+    display: block;
+}
+
